--- a/frontend/src/app/hotelservice/hotelservice.module.css
+++ b/frontend/src/app/hotelservice/hotelservice.module.css
@@ -6,3 +6,18 @@
 .box:hover {
   transform: scale(1.05);
 }
+.bookingBtn {
+    background-color: #FAB320;
+    color: black;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+}
+
+.btnWrapper {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px; /* thêm khoảng cách nếu cần */
+}
