--- a/frontend/src/app/roomtype/[parentSlug]/rcChild.module.css
+++ b/frontend/src/app/roomtype/[parentSlug]/rcChild.module.css
@@ -1,11 +1,39 @@
 .calendarHover {
-    height: 100%;
+  height: 100%;
   border-radius: 30px;
-  transition: box-shadow 0.2s, background 0.2s, color 0.2s; 
+  transition: box-shadow 0.2s, background 0.2s, color 0.2s;
   background: transparent;
   padding: 10px;
 }
 
 .calendarHover:hover {
   background: rgba(250, 179, 32, 0.10);
+}
+
+.cartButton {
+  background-color: white;
+  border: none;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
+  z-index: 10;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.cartButton:hover {
+  background-color: #FAB320;
+  transform: scale(1.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
+.cartIcon {
+  font-size: 16px;
+  color: black; /* màu đen đậm dễ nhìn */
 }
