--- a/admin/src/app/components/admin/booking/booking.component.html
+++ b/admin/src/app/components/admin/booking/booking.component.html
@@ -2,13 +2,22 @@
   <h2>Quản lý đặt phòng</h2>
 
   <!-- Controls -->
-  <div class="room-controls">
-    <input
-      type="text"
-      placeholder="Tìm kiếm tên khách hàng..."
-      [(ngModel)]="searchText"
-      (input)="filterBookings()"
-    />
+ <div class="room-controls" style="display: flex; align-items: center; gap: 8px">
+       <div
+      class="form-floating form-floating-custom mb-3"
+      style="position: relative; flex: 1"
+    >
+      <input
+        type="email"
+        class="form-control"
+        id="floatingInput"
+        placeholder="name@example.com"
+        style="width: 100%; padding-right: 30px"
+        [(ngModel)]="searchKeyword"
+        (keyup.enter)="onSearch()"
+      />
+      <label for="floatingInput">Tìm kiếm</label>
+    </div>
     <button class="add-room" (click)="openAddPopup()">
       + Thêm Đơn Đặt Phòng
     </button>
