--- a/admin/src/app/components/sidebar/sidebar.component.html
+++ b/admin/src/app/components/sidebar/sidebar.component.html
@@ -260,7 +260,7 @@
               </li>
               <li [ngClass]="{ active: isActive('/admin/employee') }">
                 <a [routerLink]="['/admin/employee']"
-                  ><span class="sub-item">Trạng thái nhân viên</span></a
+                  ><span class="sub-item">Danh sách nhân viên</span></a
                 >
               </li>
             </ul>
