--- a/frontend/src/app/cart/cart.module.css
+++ b/frontend/src/app/cart/cart.module.css
@@ -54,6 +54,17 @@
   margin-bottom: 2px;
 }
 
+.roomServices {
+  color: #ccc;
+  font-size: 0.95rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.serviceItem {
+  margin-bottom: 4px;
+}
+
 .removeBtn {
   background: none;
   border: none;
@@ -80,7 +91,7 @@
 }
 
 .checkoutBtn {
-  background: #FAB320;
+  background: #fab320;
   color: #000;
   font-weight: 700;
   border: none;
@@ -114,7 +125,7 @@
 
 .summaryTotal {
   font-weight: 800;
-  color: #FAB320;
+  color: #fab320;
   font-size: 1.3rem;
   border-top: 1px solid #444;
   padding-top: 8px;
