--- a/frontend/src/app/profile/page.module.css
+++ b/frontend/src/app/profile/page.module.css
@@ -1,17 +1,17 @@
 .container {
-  background: #121212;
-  min-height: 100vh;
+  background: url("/img/banner1.webp") no-repeat center center / cover fixed;
   padding: 40px;
   display: flex;
   justify-content: center;
   font-family: "Segoe UI", sans-serif;
   color: #f0f0f0;
-  margin-top: 100px;
+  min-height: 100vh;
+  margin-top: 5%;
 }
 
 .settingsWrapper {
   display: flex;
-  background: #1e1e1e;
+  background: linear-gradient(rgba(20, 20, 20, 0.6), rgba(20, 20, 20, 0.6));
   border-radius: 20px;
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
   overflow: hidden;
@@ -22,7 +22,7 @@
 .sidebar {
   padding: 20px;
   width: 250px;
-  background: linear-gradient(to bottom, #1e1e1e, #2c2c2c);
+  background: linear-gradient(rgba(20, 20, 20, 0.6), rgba(20, 20, 20, 0.6));
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -57,7 +57,7 @@
 }
 
 .sidebar .active {
-  color: #fbbc04;
+  color: #fab320;
   background-color: #333333;
   font-weight: bold;
 }
