--- a/frontend/src/app/profile/page.module.css
+++ b/frontend/src/app/profile/page.module.css
@@ -6,7 +6,6 @@
   font-family: "Segoe UI", sans-serif;
   color: #f0f0f0;
   min-height: 100vh;
-  margin-top: 5%;
 }
 
 .settingsWrapper {
@@ -17,6 +16,7 @@
   overflow: hidden;
   max-width: 1800px;
   width: 100%;
+  margin: 5% 10%;
 }
 
 .sidebar {
