--- a/frontend/src/app/roomtype/[parentSlug]/rcChild.module.css
+++ b/frontend/src/app/roomtype/[parentSlug]/rcChild.module.css
@@ -6,10 +6,6 @@
   padding: 10px;
 }
 
-.calendarHover:hover {
-  background: rgba(250, 179, 32, 0.10);
-}
-
 .cartButton {
   background-color: white;
   border: none;
@@ -28,7 +24,7 @@
 }
 
 .cartButton:hover {
-  background-color: #FAB320;
+  background-color: #fab320;
   transform: scale(1.1);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
   cursor: pointer;
