Sửa trang service

--- a/frontend/src/components/header/header.module.css
+++ b/frontend/src/components/header/header.module.css
@@ -1,70 +1,70 @@
 .bgColor {
-    /* background-color: #141627; */
-    height: 204px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
+  /* background-color: #141627; */
+  height: 204px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
 }
 
 .item {
-    position: relative;
-    display: inline-block;
-    /* Chỉ rộng theo chữ */
+  position: relative;
+  display: inline-block;
+  /* Chỉ rộng theo chữ */
 }
 
 .item::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px;
-    background: white;
-    transform: scaleX(0);
-    transition: transform 0.3s;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: white;
+  transform: scaleX(0);
+  transition: transform 0.3s;
 }
-.item:hover::after{
-    transform: scale(1);
+.item:hover::after {
+  transform: scale(1);
 }
 .inputSearch {
-    background-color: transparent;
-    width: 20rem;
-    height: 30px;
-    border: 0.2px solid white !important;
+  background-color: transparent;
+  width: 20rem;
+  height: 30px;
+  border: 0.2px solid white !important;
 }
 
 .inputSearch::placeholder {
-    color: white;
-    font-size: 14px;
+  color: white;
+  font-size: 14px;
 }
 
 .inputSearch:focus {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .formSearch {
-    margin-right: 100px;
+  margin-right: 100px;
 }
-.btnSearch{
+.btnSearch {
   height: 30px;
   display: flex;
   align-items: center;
 }
-.search{
+.search {
   font-size: 14px;
 }
 .navbarScrollBg {
-    background-color: black !important;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: black !important;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .navbarScrollBg :global(.nav-link),
 .navbarScrollBg :global(.navbar-brand),
 .navbarScrollBg :global(.bi) {
-    color: white !important;
+  color: white !important;
 }
 
 /* Dropdown styles */
@@ -84,7 +84,7 @@
   z-index: 1000;
   min-width: 160px;
   border-radius: 4px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .dropdown:hover .dropdownMenu {
@@ -103,6 +103,6 @@
   background-color: #555;
 }
 
-.searchInput::placeholder{
+.searchInput::placeholder {
   color: white;
 }
