--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -17,13 +17,13 @@
 html,
 body {
   max-width: 100vw;
+  font-family: "Poppins", sans-serif;
   /* overflow-x: hidden; */
 }
 
 body {
   color: var(--foreground) !important;
   background: var(--background) !important;
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
