--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -9,6 +9,8 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
 }
 
 .banner {
@@ -89,6 +91,10 @@
   padding: 8px 20px;
   border-radius: 25px;
   transition: all 0.3s ease;
+}
+
+.seeAll:hover {
+  color: #fab320;
 }
 
 /* LOẠI PHÒNG Styles */
