--- a/frontend/src/styles/components/button.module.css
+++ b/frontend/src/styles/components/button.module.css
@@ -2,27 +2,61 @@
   /* padding: 10px 24px; */
   font-weight: bold;
   background-color: transparent;
-  color: white;
   border: 1px solid #fab320;
   font-size: 16px;
   color: #fab320;
   border-radius: 6px;
   cursor: pointer;
-  transition: all 0.2s ease;  
+  transition: all 0.2s ease;
+}
+
+.buttonPrimary {
+  /* padding: 10px 24px; */
+  font-weight: bold;
+  background-color: #fab320;
+  color: black;
+  border: 1px solid #fab320;
+  font-size: 16px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.buttonLink {
+  font-weight: bold;
+  color: #fab320;
+  text-decoration: none;
+  transition: color 0.2s ease;
 }
 
 .button:hover {
   transform: scale(1.05);
+  color: black;
+  box-shadow: 0 0 15px #fab320;
   background-color: #fab320;
+  border: 1px solid #fab320;
+}
+
+.buttonPrimary:hover {
+  transform: scale(1.05);
   color: black;
   box-shadow: 0 0 15px #fab320;
   background-color: #facc15;
   border: 1px solid #facc15;
 }
 
-.button:active {
+.buttonLink:hover {
+  color: #facc15;
+  text-decoration: underline;
+}
+
+.button:active,
+.buttonPrimary:active {
   transform: scale(0.95);
   box-shadow: none;
-  background-color: #facc15;
-  border: 1px solid #facc15;
+}
+
+.buttonLink:active {
+  color: #facc15;
+  text-decoration: underline;
 }
